Rearranged test structures from the right arguments, to syntax errors